--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,14 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
+mido = "^1.3.2"
+python-rtmidi = "^1.5.8"
 
+
+[tool.poetry.group.dev.dependencies]
+black = "^24.1.1"
+flake8 = "^7.0.0"
+jupyterlab = "^4.0.12"
 
 [build-system]
 requires = ["poetry-core"]
